
#
# Copyright (c) 2017, 2020 ADLINK Technology Inc.
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ADLINK zenoh team, <zenoh@adlink-labs.tech>
#
[package]
name = "zenoh-perf-latency"
version = "0.6.0-dev"
repository = "https://github.com/eclipse-zenoh/zenoh"
homepage = "http://zenoh.io"
authors = ["kydos <angelo@icorsaro.net>",
           "Julien Enoch <julien@enoch.fr>",
           "Olivier Hécart <olivier.hecart@adlinktech.com>",
           "Luca Cominardi <luca.cominardi@adlinktech.com>"]
edition = "2018"
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Zenoh: Zero Overhead Pub/sub, Store/Query and Compute."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
async-std = { version = "=1.10.0", features = ["unstable"] }
async-trait = "0.1.42"
env_logger = "0.9.0"
log = "0.4.14"
rand = "0.8.3"
slab = "0.4.2"
clap = { version = "3.1.5", features = ["derive"] }
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", rev = "9b7338b46ce2f317086db1ceb7f54fd5dd29af54", default-features = false, features = ["transport_tcp", "transport_udp"] }
zenoh-util = { git = "https://github.com/eclipse-zenoh/zenoh.git", rev = "9b7338b46ce2f317086db1ceb7f54fd5dd29af54" }

[[bin]]
name = "t_pub_delay"

[[bin]]
name = "t_sub_delay"

[[bin]]
name = "t_ping"

[[bin]]
name = "t_pong"

[[bin]]
name = "r_ping"

[[bin]]
name = "r_pong"

[[bin]]
name = "z_ping"

[[bin]]
name = "z_pong"
